# Primos

./: pyproject.toml
src/: fetch.py
